fix logo glitch, add whitespace around form

--- a/core/css/header.css
+++ b/core/css/header.css
@@ -44,16 +44,16 @@
 #header .logo {
 	background-image: url(../img/logo.svg);
 	background-repeat: no-repeat;
-	width: 250px;
-	height: 118px;
+	width: 252px;
+	height: 120px;
 	margin: 0 auto;
 }
 
 #header .logo-wide {
 	background-image: url(../img/logo-wide.svg);
 	background-repeat: no-repeat;
-	width: 147px;
-	height: 32px;
+	width: 150px;
+	height: 34px;
 }
 
 #header .logo-icon {
@@ -61,8 +61,8 @@
 	display: inline-block;
 	background-image: url(../img/logo-icon.svg);
 	background-repeat: no-repeat;
-	width: 60px;
-	height: 32px;
+	width: 62px;
+	height: 34px;
 }
 
 #header .menutoggle {
